test_src/compiler_errors/types/binary/LeftShiftFloatError3.b
class LeftShiftFloatError3 {
    void test() {
        var value = 42;
        println(value <<= 14.0);
    }
}
